--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 
   <!-- Disable tap highlight on IE -->
   <meta name="odyink" content="no">
-  
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <link rel="shortcut icon" href="./assets/images/odyink.ico"/>
 
   <title>Odyink</title>  
 
