--- a/download.html
+++ b/download.html
@@ -57,8 +57,8 @@
       
       <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
         <div class="text-center">
-          <h1 class="h2">02 : Worker</h1>
-          <p>Odyink是一个创意的产物，稳定且高效，这与我们的DEV有着莫大的关系.</p>
+          <h1 class="h2">03 : Download</h1>
+          <p>Odyink是一个创意的产物，稳定且高效</p>
         </div>
       </div>
 
@@ -75,10 +75,9 @@
                         <img src="./assets/images/work01-hover.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>001/003</h4>
-                        <h3>Andy chen</h3>
-                        <p>UWACX（联合实验室）,whatahw与Odyink的创始人, 也是一名在校学生.</p>
-                        <a href="http://www.andyccr.com/" title="" class="btn btn-default">其介绍</a>
+                        <h3>Odyink Server</h3>
+                        <p>Batch制作的Odyink服务端(3.0)</p>
+                        <a href="./download/OdyinkServer.bat" title="" class="btn btn-default">下载</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -86,10 +85,9 @@
                         <img src="./assets/images/work02-hover.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>002/003</h4>
-                        <h3>SMG</h3>
-                        <p>Odyink与四季工作室创始人.OS爱好者.</p>
-                        <a href="./work.html" title="" class="btn btn-default">其介绍</a>
+                        <h3>Odyink User</h3>
+                        <p>Batch制作的Odyink客户端(3.0)</p>
+                        <a href="./download/OdyinkUser.bat" title="" class="btn btn-default">下载</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -97,10 +95,9 @@
                         <img src="./assets/images/work03-hover.jpg" alt="" class="img-responsive">
                       </a>
                       <div class="card-container card-container-lg">
-                        <h4>003/003</h4>
-                        <h3>Mr.赵</h3>
-                        <p>Odyink重要成员与whatahw创始人, 在全部组织兼任CFO.</p>
-                        <a href="./work.html" title="" class="btn btn-default">其介绍</a>
+                        <h3>Odyink UserPy</h3>
+                        <p>Python制作的Odyink客户端(2.0)</p>
+                        <a href="./download/OdyinkUserPy.exe" title="" class="btn btn-default">下载</a>
                       </div>
                     </div>
                     
