--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : 首页</a></li>
           <li><a href="./works.html" title="">02 : Worker</a></li>
-          <li><a href="https://smg666.lanzous.com/b0c2oyukd" title="">03 : 下载</a></li>
+          <li><a href="./download.html" title="">03 : 下载</a></li>
           <li><a href="./about.html" title="">04 : About</a></li>
           <li><a href="./contact.html" title="">05 : 联系</a></li>
           <li><a href="./components.html" title="">06 : FAQ</a></li>
