--- a/download.html
+++ b/download.html
@@ -89,7 +89,7 @@
                     <div class="card-container card-container-lg">
                       <h3>Odyink User</h3>
                       <p>
-                        Batch制作的Odyink客户端(3.0) 支持Win7及更高版本 非Win10需要下载
+                        Batch制作的Odyink客户端(3.0) 支持Win7及更高版本 如果出错需要下载
                         <a href="./download/Wget.exe">Wget.exe</a>
                         <a href="./download/OdyinkUserUse.txt">Odyink User使用说明</a>
                       </p>
