--- a/download.html
+++ b/download.html
@@ -77,7 +77,7 @@
                       <h3>Odyink Server</h3>
                       <p>
                         Batch制作的Odyink服务端(4.0) 支持Win7及更高版本  
-                        <a href="./download/OdyinkServerUse.txt">Odyink Server使用说明</a>
+                        <a href="./download/use/OdyinkServer.pdf">Odyink Server使用说明</a>
                       </p>
                       <a href="./download/OdyinkServer.bat" title="" class="btn btn-default">下载</a>
                     </div>
@@ -91,7 +91,7 @@
                       <p>
                         Batch制作的Odyink客户端(4.0) 支持Win7及更高版本 如果出错需要下载
                         <a href="./download/Wget.exe">Wget.exe</a>
-                        <a href="./download/OdyinkUserUse.txt">Odyink User使用说明</a>
+                        <a href="./download/use/OdyinkUser.pdf">Odyink User使用说明</a>
                       </p>
                       <a href="./download/OdyinkUser.bat" title="" class="btn btn-default">下载</a>
                     </div>
@@ -104,7 +104,7 @@
                       <h3>Odyink UserPy</h3>
                       <p>
                         Python制作的Odyink客户端(4.0)主流的桌面系统都支持
-                        <a href="./download/OdyinkUserPyUse.txt">Odyink UserPy使用说明</a>
+                        <a href="./download/use/OdyinkUserPy.pdf">Odyink UserPy使用说明</a>
                       </p>
                       <a href="./download/OdyinkUserPy.exe" title="" class="btn btn-default">下载</a>
                     </div>
