--- a/works.html
+++ b/works.html
@@ -89,7 +89,7 @@
                         <h4>002/003</h4>
                         <h3>SMG</h3>
                         <p>Odyink与四季工作室创始人.OS爱好者.</p>
-                        <a href="./work.html" title="" class="btn btn-default">其介绍</a>
+                        <a href="http://smgdream.com" title="" class="btn btn-default">其介绍</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
